--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -59,7 +59,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ahsw.referrals.selectminds.com/jobs/speech-pathologist-home-health-16471'>Speech Pathologist (Home Health) - Adventist Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ahsw.referrals.selectminds.com/jobs/speech-pathologist-home-health-16471'>Speech Pathologist (Home Health) - Adventist Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -152,7 +152,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Loma Linda, California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999691993215-speech-language-pathologist-central-management-office-grand-prairie-arlington-'>Uplift Education Speech Language Pathologist: Central Management Office (Grand Prairie/Arlington) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999691993215-speech-language-pathologist-central-management-office-grand-prairie-arlington-'>Uplift Education Speech Language Pathologist: Central Management Office (Grand Prairie/Arlington) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -209,7 +209,7 @@ details and?...</p>
 <p>4 days ago ... A NEW EXPERIENCE,. ALL THE WAY AROUND. At 360 Behavioral Health, we'
 re new. Yet extremely experienced. Isn't that what driven, curious, passionate?...</p>
 <hr/>
-<h5><a href='https://jhs.referrals.selectminds.com/jobs/speech-and-hearing-clinician-speech-therapy-per-diem-days-8510'>Speech and Hearing Clinician (Speech Therapy) / Per Diem (Days) - Jackson Health System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jhs.referrals.selectminds.com/jobs/speech-and-hearing-clinician-speech-therapy-per-diem-days-8510'>Speech and Hearing Clinician (Speech Therapy) / Per Diem (Days) - Jackson Health System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -298,7 +298,7 @@ details?...</p>
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BYYOURSIDEAutismTherapyServices/743999690685381-speech-language-pathologist-slp-part-time-'>BY YOUR SIDE - Autism Therapy Services Speech Language Pathologist- SLP (Part time) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BYYOURSIDEAutismTherapyServices/743999690685381-speech-language-pathologist-slp-part-time-'>BY YOUR SIDE - Autism Therapy Services Speech Language Pathologist- SLP (Part time) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
@@ -351,7 +351,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999691175816-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999691175816-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -399,7 +399,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gmh.referrals.selectminds.com/jobs/speech-pathologist-prn-day-shift-6863'>Speech Pathologist / PRN / Day Shift - Grady Health System Careers</a></h5> 
+<h5><a href='https://gmh.referrals.selectminds.com/jobs/speech-pathologist-prn-day-shift-6863'>Speech Pathologist / PRN / Day Shift - Grady Health System Careers</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -451,7 +451,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/osKc9fwh'>Valley Health Careers - Speech Pathologist PD</a></h5> 
+<h5><a href='https://jobs.jobvite.com/valleyhealth/job/osKc9fwh'>Valley Health Careers - Speech Pathologist PD</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
