--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/xaI8qpCyG1/Data-Engineer-Monitoring-And-Observability'>Data Engineer - Monitoring and Observability - Bossanova Robotics - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer-Cloud'>Senior Data Engineer (Cloud) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -48,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/76C40756B3'>Adevinta Classified Media Hungary Kft - Jobs: Szoftverfejleszt? / Data Engineer - Apply online</a></h5> 
+<h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/76C40756B3'>Adevinta Classified Media Hungary Kft - Jobs: Szoftverfejleszt? / Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -92,11 +96,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4346390002'>Job Application for Sr. Data Engineer at Cast & Crew Entertainment ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4346390002'>Job Application for Sr. Data Engineer at Cast & Crew Entertainment ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Introduce best practices and standards in effective RDMS usage in large scale 
 enterprise systems; Architect and implement large financial data warehouse,?...</p>
@@ -145,7 +149,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -238,7 +242,7 @@ this job. In Xfers, you'll likely get experience on many different projects acro
 with the role for which you're applying??. Please tell us why you selected such a
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Crossmedia/743999692213329-data-engineer'>Crossmedia Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Crossmedia/743999692213329-data-engineer'>Crossmedia Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY Los Angeles New York Hamburg Berlin London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -250,7 +254,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/C358FBC756'>Aginic - Jobs: Data Engineer (Sydney) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/C358FBC756'>Aginic - Jobs: Data Engineer (Sydney) - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -267,7 +271,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p>6 days ago ... The JCI Service Management team is seeking a Configuration Management Data 
 Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cazoo/jobs/4257222002'>Job Application for Data Engineer  at  Cazoo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cazoo/jobs/4257222002'>Job Application for Data Engineer  at  Cazoo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -377,7 +381,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://bizongo.recruiterbox.com/jobs/fk0jfdr'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bizongo.recruiterbox.com/jobs/fk0jfdr'>
     Senior Data Engineer at Bizongo
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru Bangalore</span></p>
@@ -391,7 +395,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/peloton/jobs/1785788'>Job Application for Director of Data Engineering at Peloton</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/peloton/jobs/1785788'>Job Application for Director of Data Engineering at Peloton</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -464,17 +468,13 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
+<h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 <h5><a href='https://semanticbits.workable.com/j/CED9CDE8BA'>SemanticBits - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Maryland, United States</span></p>
 <p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692038453-data-engineer'>4Catalyzer Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-07-20</p>
 <hr/>
 
 
