--- a/ios-developer.html
+++ b/ios-developer.html
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/yP40Kh6ioC/IOS-Developer-Multiple-Countries'>iOS Developer- Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/yP40Kh6ioC/IOS-Developer-Multiple-Countries'>iOS Developer- Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1957ED4B8D?viewed=true'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning ...</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/1957ED4B8D?viewed=true'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Experienced in Machine learning algorithms and implementations. Computer 
 Vision / Computational geometry. GIT version control (good knowledge). English
@@ -236,7 +236,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1748893'>Job Application for iOS Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1748893'>Job Application for iOS Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -296,7 +296,7 @@ label.</p>
 Splunk solutions with machine learning to solve their toughest IT, Internet of 
 Things?...</p>
 <hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/LqjPyD7DkM/IOS-Developer-Product'>iOS Developer - Product - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/LqjPyD7DkM/IOS-Developer-Product'>iOS Developer - Product - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai, Maharashtra, India</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -304,11 +304,11 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sohohouse.workable.com/j/C1D2ED8CEF'>Soho House &amp; Co. - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://sohohouse.workable.com/j/C1D2ED8CEF'>Soho House &amp; Co. - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/3a3cdc45-863a-47b5-8fb0-7fe9ac913202'>DKB Code Factory - Junior iOS-Developer (f,m,x)</a></h5> 
+<h5><a href='https://jobs.lever.co/dkbcodefactory/3a3cdc45-863a-47b5-8fb0-7fe9ac913202'>DKB Code Factory - Junior iOS-Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -340,7 +340,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
+<h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
       iOS Developer - Multiple Locations - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -358,7 +358,7 @@ Things?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999691379495-sr-mobile-ios-android-developer'>iSpace, Inc. Sr. Mobile(iOS/Android) Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999691379495-sr-mobile-ios-android-developer'>iSpace, Inc. Sr. Mobile(iOS/Android) Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -389,7 +389,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/5c992ef2-7127-4b22-b39e-536ddba7f4d9'>Bee Talents - Senior iOS Developer - Untitled Kingdom [10-14k PLN B2B]</a></h5> 
+<h5><a href='https://jobs.lever.co/beetalents/5c992ef2-7127-4b22-b39e-536ddba7f4d9'>Bee Talents - Senior iOS Developer - Untitled Kingdom [10-14k PLN B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -397,7 +397,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/e72d54ce-b141-495b-bf29-74be0251238c'>Gun.io - iOS Developer RxSwift/RxCocoa</a></h5> 
+<h5><a href='https://jobs.lever.co/gunio/e72d54ce-b141-495b-bf29-74be0251238c'>Gun.io - iOS Developer RxSwift/RxCocoa</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -430,7 +430,7 @@ Things?...</p>
 <p>Jun 27, 2019 ... Apply to Senior iOS Developer at Aequilibrium Software Inc. in Vancouver, BC, 
 Canada.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/907aea53-ca2a-49aa-8c89-a78db5f1bec9'>GOJEK - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/907aea53-ca2a-49aa-8c89-a78db5f1bec9'>GOJEK - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -446,7 +446,7 @@ Canada.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/1orhfyzytw6dsu841ksnyndifw'>iOS Developer- Media App  | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/1orhfyzytw6dsu841ksnyndifw'>iOS Developer- Media App  | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
